tests/baselines/reference/parserStrictMode11(strict=true).errors.txt
parserStrictMode11.ts(2,20): error TS1100: Invalid use of 'eval' in strict mode.
parserStrictMode11.ts(2,20): error TS7006: Parameter 'eval' implicitly has an 'any' type.


==== parserStrictMode11.ts (2 errors) ====
    "use strict";
    var v = function f(eval) {
                       ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
                       ~~~~
!!! error TS7006: Parameter 'eval' implicitly has an 'any' type.
    };